sql/src/test/BugDay_2005-12-19_2.9.3/Tests/select_from_env.SF-1240701.1242164.stable.err.Algebra
stderr of test 'select_from_env.SF-1240701.1242164` in directory 'src/test/BugDay_2005-12-19_2.9.3` itself:


# 13:22:15 >  
# 13:22:15 >  Mtimeout -timeout 180 Mserver "--config=/ufs/sjoerd/Monet-virgin/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/sjoerd/src/MonetDB/devel/sql-virgin/Linux/lib/MonetDB:/ufs/sjoerd/Monet-virgin/lib/MonetDB" --set "gdk_dbfarm=/ufs/sjoerd/Monet-virgin/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/sjoerd/Monet-virgin/var/MonetDB/log" --set mapi_port=30620 --set sql_port=47090 --set xquery_port=50410 --set monet_prompt= --trace "--dbname=mTests_src_test_BugDay_2005-12-19_2.9.3" --dbinit="module(sql_server); sql_server_start();" ; echo ; echo Over..
# 13:22:15 >  


# 13:22:15 >  
# 13:22:15 >  Mtimeout -timeout 60 MapiClient -lsql -u monetdb -P monetdb --host=localhost --port=47090  < select_from_env.SF-1240701.1242164.sql
# 13:22:15 >  

MAPI  = monetdb@koala:30023
QUERY = select * from env() as env where name = ( select 'prefix' from env() as env );
ERROR = !ERROR: zero_or_one: cardinality violation (45>1)
        !ERROR: zero_or_one: operation failed.

# 13:22:15 >  
# 13:22:15 >  Done.
# 13:22:15 >  

